user: clear stray username in `5.html`.

--- a/5.html
+++ b/5.html
@@ -29,7 +29,7 @@
           return base.$asArray();
       });
       app.controller("HeatCtrl", function ($scope, messages) {
-          $scope.user = 'thruflo';
+          $scope.user = '';
           $scope.messages = messages;
           $scope.add = function (text) {
             $scope.messages.$add({
